--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <title>CryptoPython</title>
-<h1>Bienvue dans votre atelier CryptoPython !</h1>
+<h1>Bienvue dans l'atelier de SRV.T !</h1>
